Ajuste na modelagem no PlanoAlimentar